--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -219,7 +219,43 @@ body.dark {
   position: relative;
   margin-left: 2rem;
 }
-
+.mySwiper {
+  height: 350px;
+}
+.swiper-wrapper {
+  align-items: center;
+}
+.swiper-slide {
+  width: 200px;
+  height: 250px;
+  border-radius: 7px;
+}
+.my__projek {
+  width: 100%;
+  gap: 0.5em;
+  padding: 0 1.5rem;
+}
+.img__swipe {
+  width: 250px;
+  border-radius: 10px;
+  display: flex;
+  margin: 0 auto;
+}
+.judul__porto {
+  width: 100%;
+  font-weight: 600;
+  font-size: 1rem;
+  font-style: italic;
+  padding: 0.2em;
+}
+.info__porto {
+  top: -1px;
+  color: var(--gray);
+}
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  content: '';
+}
 @media screen and (max-width: 480px) {
   .n-list {
     display: none;
@@ -231,9 +267,47 @@ body.dark {
     flex-direction: column;
     gap: 2rem;
   }
-
   .i-right {
     transform: scale(1);
   }
+}
 
+@media screen and (min-width: 480px) {
+  .intro {
+    height: auto;
+    margin-bottom: 1em;
+  }
+  .mySwiper {
+    padding: 0 2.5rem;
+  }
+  .my__projek {
+    padding: 3rem 2.5rem;
+    display: flex;
+    justify-content: center;
+  }
+  .img__swipe {
+    margin: 0 0;
+    width: 300px;
+    height: 160px;
+  }
+  .p_right {
+    margin: 0 2rem;
+  }
+}
+@media screen and (min-width: 780px) {
+  .n-left {
+    gap: 1em;
+  }
+  .n-list>ul {
+    gap: 0.5em;
+  }
+  .i-left {
+    gap: 0.3rem;
+  }
+  .i-name > :nth-child(1) {
+    font-size: 2rem;
+  }
+  .i-name > :nth-child(2) {
+    font-size: 2rem;
+  }
 }
