--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@
   --blue: #004fff;
   --black: #242D49;
   --white: #fcfcfc;
-  --gray: #788097;
+  --gray: rgb(162,162,162);
   --blueCard: #DDF8FE;
 }
 
