--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -273,6 +273,7 @@ body.dark {
     padding: 0.5rem 1rem;
   }
   .intro {
+    margin-bottom: 1em;
     flex-direction: column;
     gap: 2rem;
   }
